@@ -36,8 +36,8 @@ likely very different from the true GC content of the probes.}
 \item{normalDB}{Normal database, created with
 \code{\link{createNormalDatabase}}.}
 
-\item{normalDB.min.coverage}{Exclude targets with coverage lower than 20
-percent of the chromosome median in the pool of normals.}
+\item{normalDB.min.coverage}{Exclude targets with coverage lower than 
+the specified fraction of the chromosome median in the pool of normals.}
 
 \item{normalDB.max.missing}{Exclude targets with zero coverage in the
 specified fraction of normal samples.}
