@@ -316,8 +316,7 @@ in coverage per target:
 
 <<targetweightfile1, message=FALSE>>=
 target.weight.file <- "target_weights.txt"
-createTargetWeights(tumor.coverage.file, normal.coverage.files, 
-    target.weight.file)
+createTargetWeights(normalDB$normal.coverage.files, target.weight.file)
 @
 
 This function calculates target-level copy number log-ratios using all normal
@@ -325,11 +324,7 @@ samples provided in the \Rcode{normal.coverage.files} argument.  Assuming that
 all normal samples are in general diploid, a high variance in log-ratio
 is indicative of an target with either common germline alterations or frequent
 artifacts; high or low copy number log-ratios in these targets are unlikely
-measuring somatic copy number events.  For the log-ratio calculation, we provide
-a coverage file that is used as tumor in the log-ratio calculation. The
-corresponding \Rcode{tumor.coverage.file} argument can also be an array of a
-small number of coverage files, in which case the target coverage variance is
-averaged over all provided tumor files. 
+measuring somatic copy number events.  
 
 This \Rcode{target.weight.file} is automatically generated by the NormalDB.R
 script described in the Quick vignette. 
@@ -876,16 +871,15 @@ which case the provided \Rcode{sampleid} must match a sample in the column
 
 Since its likelihood model is exon-based, \Biocpkg{PureCN} currently still
 requires an interval file to generate simulated target-level log-ratios from a
-segmentation file.  For simplicity, this interval file is expected either in
-\software{GATK DepthOfCoverage} format and provided via the
-\Rcode{tumor.coverage.file} argument or via the \Rcode{gc.gene.file} argument (see
-Figure~\ref{figure/figurecustombaf-1}). Note that \Biocpkg{PureCN} will 
+segmentation file.  For simplicity, this interval file is expected either via
+the \Rcode{tumor.coverage.file} or via the \Rcode{gc.gene.file} argument (see
+Figure~\ref{figure/figurecustombaf-1}). Note that \Biocpkg{PureCN} will
 re-segment the simulated log-ratios using the default
 \Rfunction{segmentationCBS} function, in particular to identify regions of
 copy-number neutral LOH and to cluster segments with similar allelic imbalance
-and log-ratio. The provided interval file should therefore cover
-all significant copy number alterations\footnote{If this behaviour is not
-wanted, because maybe the custom function already identifies CNNLOH reliably,
+and log-ratio. The provided interval file should therefore cover all
+significant copy number alterations\footnote{If this behaviour is not wanted,
+because maybe the custom function already identifies CNNLOH reliably,
 \Rfunction{segmentationCBS} can be replaced with a minimal version.}. Please
 check that the log-ratios are similar to the ones obtained by the default
 \Biocpkg{PureCN} segmentation and normalization.
